Avro Change Log

Avro 1.7.2 (unreleased)

  NEW FEATURES

  IMPROVEMENTS

  BUG FIXES

    AVRO-1128. Java: Fix SpecificRecordBase#equals() to work for
    records that contain maps.  (cutting)

    AVRO-1131. Generated build makefiles for MSYS/MinGW use Visual
    Studio compiler flags (Laurent Moss via thiru)

Avro 1.7.1 (16 July 2012)

  NEW FEATURES

    AVRO-1106. Java: Add AvroMultipleOutputs for newer mapreduce API.
    (Ashish Nagavaram via cutting)

    AVRO-1112. Java: Add support for Snappy codec to newer mapreduce API.
    (Matt Mead via cutting)

    AVRO-1108. Java: Add support for reflect API to newer mapreduce API.
    (cutting)

    AVRO-1104. C: avroappend utility. (Lucas Martin-King via dcreager)

    AVRO-1117. C: avro_file_writer_create_with_codec_fp and
    avro_file_writer_create_with_fp functions, with should_close parameter.
    (Lucas Martin-King via dcreager)

  IMPROVEMENTS

    AVRO-1120. Let AvroMultipleOutput jobs use multiple schemas with
    map-only jobs. (Ashish Nagavaram via cutting)

    AVRO-1119. Java: Permit NettyServer to be used with SSL.
    (Sebastian Ortega via cutting)

    AVRO-1125. Java: Remove un-needed warning about reflect API. (cutting)

  BUG FIXES

    AVRO-1114. Java: Update license headers for new mapreduce code.  (cutting)

    AVRO-1069. Java: Fix HttpTransceiver to close streams. (cutting)

    AVRO-1115. C: Fix crash error in codec cleanup code. (Maxim Pugachev via
    dcreager)

    AVRO-1116. C++ code crashes on Data files with no data. (thiru)

    AVRO-1109. CSharp specific fails on multidimensional arrays.
    (Mark Farnan via thiru)

Avro 1.7.0 (11 June 2012)

  NEW FEATURES

    AVRO-301. Handle non-reserved properties appropriately in the Python
    implementation. (Macrio Silva via tebeka)

    AVRO-300. Support "doc" field in schemas in Python implementation.
    (Harsh J via tebeka)

    AVRO-1006.  Add schema fingerprinting to specification and Java.
    (Raymie Stata via cutting)
